# Pack-Analyzer

./: .eslintrc.json  .gitignore  README.md  _headers  analyzer.js  eslint.config.js  index.html  manifest.json  minify.js  package-lock.json  package.json  script.js  serviceworker.js  style.css  wrangler.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  eslint.yml  extension-preview-release.yml  sentry.yml  tauri-test-pr.yml
assets/: analyzer.js  jszip.js  manifest.json  script.js  style.css
assets/images/: icon.pdn
src/: analyzer.html  analyzer.js  script.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
vscExtension/: .vscodeignore  build.js  package-lock.json  package.json
vscExtension/dpIcons/: README.md
vscExtension/src/: extension.js
