[package]
name = "datapack-analyzer"
version = "1.1.0"
description = "An app used to analyze Minecraft Datapacks and generate stats"
authors = ["TomatoCake"]
license = "CC BY-NC-SA 4.0"
repository = "https://github.com/DEVTomatoCake/Datapack-Analyzer"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-message", "dialog-open", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-write-file", "http-request", "path-all", "updater"] }
sentry = "0.27"
sentry-tauri = "0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
